--- a/package.json
+++ b/package.json
@@ -10,22 +10,30 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "box-ui-elements": "^2.0.0",
-    "css-loader": "^0.28.4",
+    "box-react-ui": "^21.4.0",
+    "box-ui-elements": "^3.5.1",
+    "classnames": "^2.2.5",
+    "css-loader": "^0.28.8",
     "extract-text-webpack-plugin": "^3.0.2",
+    "jsuri": "^1.3.1",
+    "lodash": "^4.17.4",
     "lodash.noop": "^3.0.1",
     "lodash.omit": "^4.5.0",
     "lodash.uniqueid": "^4.0.1",
-    "node-sass": "^4.5.3",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "node-sass": "^4.7.2",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-intl": "^2.4.0",
     "react-measure": "^2.0.2",
-    "react-virtualized": "^9.12.0",
+    "react-modal": "^3.1.11",
+    "react-tether": "^0.6.0",
+    "react-virtualized": "^9.17.3",
+    "regenerator-runtime": "^0.11.1",
     "sass-loader": "^6.0.5",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "style-loader": "^0.19.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.0"
   },
   "scripts": {
     "dev": "BABEL_ENV=dev NODE_ENV=dev ./node_modules/.bin/webpack --progress --colors",
