--- a/package.json
+++ b/package.json
@@ -5,33 +5,38 @@
   "author": "Box (https://www.box.com/)",
   "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "box-react-ui": "^21.4.0",
-    "box-ui-elements": "^3.5.1",
+    "box-react-ui": "^22.8.1",
+    "box-ui-elements": "^4.4.1",
     "classnames": "^2.2.5",
-    "css-loader": "^0.28.8",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
+    "filesize": "^3.6.1",
     "jsuri": "^1.3.1",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
     "lodash.noop": "^3.0.1",
     "lodash.omit": "^4.5.0",
     "lodash.uniqueid": "^4.0.1",
-    "node-sass": "^4.7.2",
-    "prop-types": "^15.6.0",
+    "node-sass": "^4.8.3",
+    "prop-types": "^15.6.1",
+    "randomcolor": "^0.5.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-intl": "^2.4.0",
     "react-measure": "^2.0.2",
-    "react-modal": "^3.1.11",
-    "react-tether": "^0.6.0",
-    "react-virtualized": "^9.17.3",
+    "react-modal": "^3.3.2",
+    "react-process-string": "^1.2.0",
+    "react-tether": "^0.6.1",
+    "react-textarea-autosize": "^6.1.0",
+    "react-virtualized": "^9.18.5",
     "regenerator-runtime": "^0.11.1",
-    "sass-loader": "^6.0.5",
-    "style-loader": "^0.19.1",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.0"
   },
