chore: update packages

--- a/package.json
+++ b/package.json
@@ -11,52 +11,54 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "box-react-ui": "^26.2.3",
-    "box-ui-elements": "^7.0.0",
-    "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
-    "draft-js": "^0.10.5",
     "extract-text-webpack-plugin": "^3.0.2",
     "filesize": "^3.6.1",
     "form-serialize": "^0.7.2",
+    "mini-css-extract-plugin": "^0.4.2",
+    "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-safe-parser": "^4.0.1",
+    "prop-types": "^15.7.2",
+    "react-immutable-proptypes": "^2.1.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "tabbable": "^4.0.0",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
+  },
+  "scripts": {
+    "build:dev": "BABEL_ENV=dev NODE_ENV=dev ./node_modules/.bin/webpack --progress --colors",
+    "clean": "rm -rf dist",
+    "build": "yarn install && yarn clean && yarn build:dev",
+    "start": "yarn install && BABEL_ENV=dev NODE_ENV=dev ./node_modules/.bin/webpack-dev-server"
+  },
+  "dependencies": {
+    "box-ui-elements": "^10.0.0-beta.11",
+    "classnames": "^2.2.6",
+    "draft-js": "^0.10.5",
     "immutable": "^3.8.2",
     "jsuri": "^1.3.1",
     "lodash": "^4.17.11",
-    "lodash.noop": "^3.0.1",
-    "lodash.omit": "^4.5.0",
-    "lodash.uniqueid": "^4.0.1",
-    "mini-css-extract-plugin": "^0.4.2",
-    "node-sass": "^4.9.3",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "pikaday": "^1.7.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-safe-parser": "^4.0.1",
-    "prop-types": "^15.6.2",
-    "randomcolor": "^0.5.3",
-    "react": "^16.5.1",
+    "randomcolor": "^0.5.4",
+    "react": "^16.8.4",
     "react-animate-height": "^2.0.4",
-    "react-dom": "^16.5.1",
-    "react-immutable-proptypes": "^2.1.0",
-    "react-intl": "^2.5.0",
-    "react-measure": "^2.1.2",
-    "react-modal": "^3.5.1",
+    "react-dom": "^16.8.4",
+    "react-intl": "^2.8.0",
+    "react-measure": "^2.2.4",
+    "react-modal": "^3.8.1",
     "react-process-string": "^1.2.0",
-    "react-tether": "^0.6.1",
+    "react-tether": "1.0.1",
     "react-textarea-autosize": "^6.1.0",
-    "react-virtualized": "^9.20.1",
+    "react-virtualized": "^9.21.0",
     "regenerator-runtime": "^0.12.1",
-    "sass-loader": "^7.1.0",
-    "scroll-into-view-if-needed": "^2.2.16",
-    "style-loader": "^0.23.0",
-    "tabbable": "^3.1.1",
-    "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8"
-  },
-  "scripts": {
-    "dev": "BABEL_ENV=dev NODE_ENV=dev ./node_modules/.bin/webpack --progress --colors",
-    "clean": "rm -rf dist",
-    "build": "yarn install && yarn run clean && yarn run dev",
-    "deploy": "yarn install && BABEL_ENV=dev NODE_ENV=dev ./node_modules/.bin/webpack-dev-server"
+    "scroll-into-view-if-needed": "^2.2.20",
+    "query-string": "^6.4.0",
+    "react-beautiful-dnd": "^10.1.0",
+    "react-router-dom": "^5.0.0",
+    "uuid": "^3.3.2"
   }
 }
